language/move-prover/tests/sources/functional/ModifiesSchemaTest.exp
Move prover returns: exiting with boogie verification errors
error: caller does not have permission to modify `A::S` at given address

    ┌── tests/sources/functional/ModifiesSchemaTest.move:12:16 ───
    │
 12 │     public fun mutate_at(addr: address) acquires S {
    │                ^^^^^^^^^
    │
    =     at tests/sources/functional/ModifiesSchemaTest.move:29:5: mutate_at_wrapper2
    =     at tests/sources/functional/ModifiesSchemaTest.move:12:16: mutate_at
    =         addr = <redacted>
    =     at tests/sources/functional/ModifiesSchemaTest.move:13:17: mutate_at
    =         s = <redacted>
    =     at tests/sources/functional/ModifiesSchemaTest.move:14:15: mutate_at
    =     at tests/sources/functional/ModifiesSchemaTest.move:12:16: mutate_at
